--- a/test_controller/CMakeLists.txt
+++ b/test_controller/CMakeLists.txt
@@ -9,6 +9,8 @@ project(test_controller)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  # std_msgs
+  # message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,8 +49,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 # add_message_files(
 #   FILES
-#   Message1.msg
-#   Message2.msg
+#   pidErrorPoint.msg
 # )
 
 ## Generate services in the 'srv' folder
@@ -68,7 +69,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#     std_msgs  # Or other packages containing msgs
 # )
 
 ################################################
@@ -104,7 +105,7 @@ catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES test_controller
 #  CATKIN_DEPENDS rospy
-#  DEPENDS system_lib
+#  DEPENDS message_runtime
 )
 
 ###########
