improve character cropping, and template matching, added more robust preprocessing, filtering, cleaning, achieved ~50-75% peak plate accuracy

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ devel/*
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+id_imgs/*
+license_imgs/*
 
 # Local History for Visual Studio Code
 .history/
